--- a/jenkinsfile
+++ b/jenkinsfile
@@ -2,14 +2,14 @@ pipeline {
     agent any
 
     environment {
-        DOCKER_IMAGE = "myusername03/nodejs-jenkins-demo"
+        DOCKER_IMAGE = "dreeees/first-docker-repo"
         DOCKER_TAG = "latest"
     }
 
     stages {
         stage('Clone Repository') {
             steps {
-                git branch: 'main', credentialsId: 'github-credentials', url: 'https://github.com/AngelGabriel-tech/nodejs-app.git'
+                git branch: 'main', credentialsId: 'github-credentials', url: 'https://github.com/Dreees/nodejsapp.git'
             }
         }
      
